[package]
name = "dcron"
version = "0.1.0"
edition = "2021"


[[bin]] # Bin to run the Public gRPC server
name = "dcron-server"
path = "src/server.rs"

[[bin]] # Bin to run the Public gRPC client
name = "dcron-client"
path = "src/client.rs"

[[bin]]
name="dcron-scheduler"
path = "src/scheduler.rs"

[dependencies]
futures-util = "0.3.19"
closure = "0.3.0"
job_scheduler = "1.2.1"
chrono = "0.4.0"
once_cell = "1.8.0"
clap = "2.33.0"
anyhow = "1.0.51"
futures = {version = "0.3.18", features = ["thread-pool"] }
toml = "0.5.8"
rust-s3 = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.0.0"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"
